# dev-retry

./: CMakeLists.txt  README.md  cgal.h  hgp_py.cpp  hgpmesh.cpp  kdtree.cpp  lgp_api.cpp  libhgp.h
out_libhgp/: libhgp.h
vis/: hgp_py.cp312-win_amd64.pyd
vis/backend/: app.py
vis/backend/mesh_cache/: 43fbe298.off  4c1657e4.off  53778557.off  57cc1729.off  7085a9ca.off  9c707de3.off
vis/backend/web/: index.html
vis/docs/: bug-fix-summary-2026-03-31.md  convex-hull-missing-faces.md  digital-manufacturing-csg.md  slicer-contour-debug.md  交互平台工程优化技术文档-2026-04-01.md
